[tool.poetry]
name = "ai-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund simulation using multiple specialized agents"
authors = ["AI Hedge Fund Contributors"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-groq = "^0.2.0"
langgraph = "^0.2.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
yfinance = "^0.2.40"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
requests = "^2.31.0"
tabulate = "^0.9.0"
pydantic = "^2.5.0"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
ipython = "^8.20.0"

[tool.poetry.scripts]
hedge-fund = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# disabling strict optional for now — too many false positives in agent code
strict_optional = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
